--- a/shop.css
+++ b/shop.css
@@ -76,49 +76,29 @@ html
 }
 /*END NG NAVBAR*/
 
-/*START NG VIDEO CAROUSEL*/
-.imageVideo 
-{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-}
-/*END NG VIDEO CAROUSEL*/
-
-/*START NG FEATURED */
-.card-img-top 
-{
-  height: 500px;
-  object-fit: contain;
-}
-
-#textfeatureBrands
-{
-  margin-left: 10px;
-}
-/*END NG FEATURED */
-
-/*START NG LATEST*/
+/*START NG SHOP CONTENT*/
 #textlatestRelease 
 {
+  background-color: #e0e0e0;
   margin-left: 20px;
 }
 
-#textConverse
+#textConverse 
 {
+  background-color: #e0e0e0;
   margin-top: 38px;
 }
 
 .shoe-image 
 {
+  background-color: #e0e0e0;
   width: 100%;
   object-fit: cover;
 }
 
 .shoe-image-hover 
 {
+  background-color: #e0e0e0; 
   display: none;
   width: 100%;
   object-fit: cover;
@@ -127,6 +107,7 @@ html
 
 .latest-item:hover .shoe-image-hover 
 {
+  background-color: #e0e0e0;
   display: block;
 }
 
@@ -135,29 +116,35 @@ html
   display: flex;
   flex-wrap: wrap;
   margin: 0;
+  align-items: flex-start; 
 }
 
 .latest-item 
 {
+  background-color: #e0e0e0;
   width: calc(25% - 20px);
   margin: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   border: 2px;
   border-radius: 10px;
   padding: 0;
-  display: inline-block;
+  display: flex; 
+  flex-direction: column; 
 }
 
 .latest-item:hover .shoe-image 
 {
+  background-color: #e0e0e0;
   display: none;
 }
 
 .collection-name 
 {
+  background-color: #c4bebe;
   font-weight: bold;
   text-align: center;
   font-size: 17.6px;
+  color: black;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -174,8 +161,70 @@ html
   margin: 20px 20px;
   display: inline-block;
 }
-/*END NG LATEST*/
 
+.bginfo 
+{
+  color: rgb(255, 0, 0);
+  font-size: 33px;
+  background-color: rgba(0, 0, 0, 0.5); 
+  padding: 20px;
+  margin: 40px;
+  display: block;
+  border-radius: 15px; 
+  border: 1px solid #ffffff; 
+}
+
+.bginfo .details-box 
+{
+  background-color: rgba(43, 42, 42, 0);
+  padding: 10px;
+  color: #fdfdfd;
+}
+
+
+.latest-item 
+{
+  display: flex; 
+  flex-direction: column; 
+}
+
+.details-box 
+{
+  background-color: rgba(255, 255, 255, 0.829);
+  padding: 15px;
+  color: #000;
+  margin-left: 20px; 
+  box-shadow: 0 4px 8px rgba(255, 2, 2, 0);
+}
+
+.add-to-cart-btn 
+{
+  background: none; 
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.cart-icon 
+{
+  width: 60px;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.add-to-cart-btn:hover .cart-icon 
+{
+  transform: scale(1.2);
+}
+
+
+.small-label 
+{
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+/*END NG SHOP CONTENT*/
 
 /*REQUIRED COLOR*/
 .highlightedText2
@@ -183,6 +232,110 @@ html
   color: red;
 }
 /*END NG REQUIRED COLOR*/
+
+/*START NG FOOTER*/
+.footer-links a 
+{
+  text-decoration: none;
+  color: inherit;
+}
+
+footer h5 
+{
+  line-height: 6.5;
+}
+
+footer ul li 
+{
+  line-height: 3;
+}
+
+footer .row.justify-content-between 
+{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+  margin-bottom: 70px;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+footer a.text-white 
+{
+  color: white;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+.footer-align 
+{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  white-space: nowrap; 
+  padding-left: 20px; 
+  padding-right: 20px;
+}
+
+.footerH5First 
+{
+  margin-right: 70px;
+  margin-bottom: 0px;
+}
+
+.footerH5Second 
+{
+  margin-top: 10px;
+}
+
+.footer-bottom 
+{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.footer-bottom p
+{
+  margin: 0px;
+  color: inherit;
+}
+
+.footer-bottom a 
+{
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer-bottom a:hover 
+{
+  text-decoration: none; 
+}
+
+.social-icon 
+{
+  display: inline-block;
+  margin-top: -10px;
+  margin-left: 29px;
+  vertical-align: middle;
+}
+
+.cash-icon {
+  display: inline-block;
+  margin-top: -40px;
+  margin-right: -14px;
+  vertical-align: middle;
+}
+
+.clickable-h5 
+{
+  cursor: pointer;
+}
+/* END NG FOOTER*/
 
 /* FEEDBACK MODAL */
 .rating 
@@ -229,116 +382,6 @@ html
   color: #ffcc00;
 }
 /* END FEEDBACK MODAL */
-
-
-/*START NG FOOTER*/
-.footer-links a 
-{
-  text-decoration: none;
-  color: inherit;
-}
-
-footer h5 
-{
-  line-height: 6.5;
-}
-
-footer ul li 
-{
-  line-height: 3;
-}
-
-footer .row.justify-content-between 
-{
-  display: flex;
-  justify-content: space-between;
-  margin-top: 40px;
-  margin-bottom: 70px;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-footer a.text-white {
-  color: white;
-  text-decoration: none;
-  margin-right: 20px;
-}
-
-.footer-align {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  white-space: nowrap; 
-  padding-left: 20px; 
-  padding-right: 20px;
-}
-
-.footerH5First {
-  margin-right: 70px;
-  margin-bottom: 0px;
-}
-
-.footerH5Second {
-  margin-top: 10px;
-}
-
-.footer-bottom {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.footer-bottom p{
-  margin: 0px;
-  color: inherit;
-}
-
-.footer-bottom a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.footer-bottom a:hover {
-  text-decoration: none; 
-}
-
-.social-icon {
-  display: inline-block;
-  margin-top: -10px;
-  margin-left: 29px;
-  vertical-align: middle;
-}
-
-.cash-icon 
-{
-  display: inline-block;
-  margin-top: -40px;
-  margin-right: -14px;
-  vertical-align: middle;
-}
-
-.clickable-h5 
-{
-  cursor: pointer;
-}
-/* END NG FOOTER*/
-
-/* START TERMS OF SALE MODAL */
-.contact-section 
-{
-  padding-left: 20px;
-}
-
-.contact-section p 
-{
-  text-indent: -3em;
-  margin-left: 3em; 
-}
-/* END TERMS OF SALE MODAL */
 
 /* START NG HELP PAGE*/
 /* START NG DELIVERY PAGE*/
@@ -393,30 +436,22 @@ a
 {
   font-size: 18px;
 }
-
-.answer 
-{
+.answer {
   display: none;
   margin-top: 10px;
   font-size: 16px;
   color: #555;
 }
-
-.contact-container 
-{
+.contact-container {
   display: flex;
   justify-content: space-around;
   margin: 50px;
   text-align: center;
 }
-
-.contact-item 
-{
+.contact-item {
   width: 30%;
 }
-
-.contact-item img 
-{
+.contact-item img {
   width: 50px;
   height: 50px;
 }
